@@ -8,10 +8,13 @@ release
     (TR)
   - made 'self' visible in '#settings python' directives (TR)
   - fixed meta tag http_equiv to be http-equiv in SkeletonPage (TR)
+  - $webInput (Utils.WebInputMixin) 'source' arg can be either case. (MO)
 
 0.9.14 (July 14, 2002)
   - Precompiled template Templates/SkeletonPage.py added to CVS.  This file is
     needed for Cheetah's regression tests. (MO)
+  - removed automatic recompilation of .py template in memory if the
+    .tmpl file has changed.  (TR)
 
 0.9.14b1 (June 30, 2002)
   - moved the Users' Guide and the Developers' Guide into a separate CVS module,
